// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow singleTags template escapes HTML special characters in template 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "\\"&<>",
      ],
      "name": "p",
      "opts": Object {},
    },
  ],
  "name": "tag",
  "opts": Object {},
}
`;

exports[`shallow singleTags template extracts template 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "name": "p",
      "opts": Object {},
    },
  ],
  "name": "tag",
  "opts": Object {},
}
`;

exports[`shallow singleTags template renders ignoring style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "name": "p",
      "opts": Object {},
    },
  ],
  "name": "static",
  "opts": Object {},
}
`;

exports[`shallow singleTags template renders static tag 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "Hello, world!",
      ],
      "name": "p",
      "opts": Object {},
    },
  ],
  "name": "static",
  "opts": Object {},
}
`;

exports[`shallow singleTags template template "each" work 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "A",
      ],
      "name": "p",
      "opts": Object {},
    },
    Object {
      "children": Array [
        "B",
      ],
      "name": "p",
      "opts": Object {},
    },
    Object {
      "children": Array [
        "C",
      ],
      "name": "p",
      "opts": Object {},
    },
  ],
  "name": "tag",
  "opts": Object {},
}
`;
